<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradiante_splash"
        app:layout_constraintVertical_weight="1">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_aplicativo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/edit_shape_layout"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLoginTheme"
            android:text="@string/text_email_login_fragment" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_login"
            android:padding="14dp"
            android:textColorHint="@color/white"
            android:hint="@string/text_hint_email_login_fragment"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLoginTheme"
            android:text="@string/text_password_login_fragment" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_login"
            android:padding="14dp"
            android:textColorHint="@color/white"
            android:hint="@string/text_hint_password_login_fragment"
            android:inputType="textPassword" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_authenticated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                style="@style/CheckBoxTheme"
                android:text="@string/text_checkbox_login_fragment" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                style="@style/TextRegisterLoginTheme"
                android:text="@string/text_register_login_fragment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:background="@drawable/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonLoginTheme"
            android:text="@string/text_button_login_fragment"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            tools:visibility="visible"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>