<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiante_splash"
    tools:context=".ui.auth.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_appBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/GenericTitleTheme"
                android:text="@string/text_title_toolbar_register_fragment"
                android:textColor="@color/white" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/edit_shape_layout"
        android:orientation="vertical"
        android:padding="32dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextLoginTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email_login_fragment" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_login"
            android:hint="@string/text_hint_email_login_fragment"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColorHint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextLoginTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password_login_fragment" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_login"
            android:hint="@string/text_hint_password_login_fragment"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_button_register_login_fragment"
            style="@style/ButtonLoginTheme" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            tools:visibility="visible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>